# LestaGamesCourse

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: github-ci-pipeline.yaml
01-homework-hello/: CMakeLists.txt
01-homework-hello/01-1-simple-hello/: CMakeLists.txt  main.cxx
01-homework-hello/01-2-hello-libs/: CMakeLists.txt
01-homework-hello/01-2-hello-libs/hello-bin-with-static-and-shared/: CMakeLists.txt  main.cpp  main.cxx
01-homework-hello/01-2-hello-libs/hello-bin-with-static-and-shared/hello-libs/: CMakeLists.txt
01-homework-hello/01-2-hello-libs/hello-bin-with-static-and-shared/hello-libs/include/: hello.hpp
01-homework-hello/01-2-hello-libs/hello-bin-with-static-and-shared/hello-libs/src/: hello.cpp  hello.cxx
01-homework-hello/01-2-hello-libs/hello-config/: hello-config.hpp.in
02-homework-sdl-lib/: CMakeLists.txt  main.cpp  main.cxx
02-homework-sdl-lib/sdl-dynapi-fun/: CMakeLists.txt  main.cxx  readme.md
03-homework-sdl-loop/: CMakeLists.txt
03-homework-sdl-loop/hot-reload-game-dll/: CMakeLists.txt  engine.cxx  engine.hxx  game.cxx
03-homework-sdl-loop/sdl-shared-engine/: CMakeLists.txt  engine.cxx
03-homework-sdl-loop/sdl-simple-loop/: CMakeLists.txt  main.cxx
03-homework-sdl-loop/sdl-static-engine/: CMakeLists.txt  engine.hxx  game.cxx
04-homework-basic-graphics/: CMakeLists.txt
04-homework-basic-graphics/basic-canvas/: CMakeLists.txt  main.cxx  my-basic-canvas.cxx  my-basic-canvas.hxx
04-homework-basic-graphics/basic-canvas/resources/: ppm3-image-for-loading-1.ppm  saved-ppm3-blue-image.ppm  saved-ppm3-image-1.ppm
04-homework-basic-graphics/basic-line/: CMakeLists.txt  helper.cxx  helper.hxx  line-render.cxx  line-render.hxx  main.cxx  render.cxx  render.hxx
04-homework-basic-graphics/basic-line/resources/: bresenham-algorithm.ppm  dda-algorithm.ppm
04-homework-basic-graphics/basic-triangle/: CMakeLists.txt  main.cxx  triangle-render.cxx  triangle-render.hxx
04-homework-basic-graphics/basic-triangle/resources/: basic-triangle.ppm  figure.ppm
04-homework-basic-graphics/shader-programms/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  shader-programm.hxx
04-homework-basic-graphics/triangle-interpolated/: CMakeLists.txt  main.cxx  triangle-interpolated-render.cxx  triangle-interpolated-render.hxx
04-homework-basic-graphics/triangle-interpolated/resources/: horizontal-interpolated-lines.ppm  square-interpolated.ppm  star-interpolated.ppm  triangle-interpolated.ppm  vertical-interpolated-lines.ppm
04-homework-basic-graphics/triangles-indexed/: CMakeLists.txt  main.cxx  triangle-indexed-render.cxx  triangle-indexed-render.hxx
04-homework-basic-graphics/triangles-indexed/resources/: triangles-indexed.ppm
05-homework-opengl-basic/: CMakeLists.txt
05-homework-opengl-basic/opengl-complex-shader/: CMakeLists.txt  engine.cxx  main.cxx  star-vertex.shader
05-homework-opengl-basic/opengl-minimal/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
05-homework-opengl-basic/opengl-triangle/: CMakeLists.txt  engine.cxx  engine.hxx  fragment.shader  main.cxx  vertex.shader
06-homework-opengl-texture-and-morphing/: CMakeLists.txt
06-homework-opengl-texture-and-morphing/load-texture/: CMakeLists.txt  engine.cxx  engine.hxx  input-data.hxx  main.cxx  opengl-shader-programm.hxx
06-homework-opengl-texture-and-morphing/math-on-cpu/: CMakeLists.txt  engine.cxx  engine.hxx  glm-math.hxx  main.cxx  opengl-shader-programm.cxx  texture-vertex.shader
06-homework-opengl-texture-and-morphing/math-on-gpu/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  opengl-shader-programm.cxx  opengl-shader-programm.hxx  texture-fragment.shader  texture-vertex.shader
06-homework-opengl-texture-and-morphing/morphing/: CMakeLists.txt  engine.cxx  engine.hxx  input-data.hxx  main.cxx  opengl-debug.hxx  opengl-shader-programm.cxx
07-homework-add-imgui/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  triangle-vertex.shader
08-homework-add-sound/: CMakeLists.txt
08-homework-add-sound/add-sound-to-engine/: CMakeLists.txt  engine.cxx  main.cxx  opengl-shader-programm.cxx
08-homework-add-sound/sound-and-sdl/: CMakeLists.txt  main.cxx
09-homework-imgui-via-engine-api/: CMakeLists.txt  engine.cxx  engine.hxx  imgui-fragment.shader  main.cxx  opengl-shader-programm.cxx  opengl-shader-programm.hxx  triangle-fragment.shader
arcanoid/: CMakeLists.txt  readme.md
arcanoid/engine/: CMakeLists.txt  engine.cxx  engine.hxx  opengl-shader-programm.cxx  picopng.hxx
arcanoid/engine/glad/: CMakeLists.txt
arcanoid/engine/imgui/: imgui_impl_opengl.cpp
arcanoid/engine/imgui_impl/: imgui_impl_opengl.cxx
arcanoid/engine/include/: opengl-debug.hxx
arcanoid/engine/shaders/: CMakeLists.txt  texture-vertex.shader
arcanoid/engine/src/: engine.cxx  opengl-shader-programm.cxx
arcanoid/game/: game.cxx
arcanoid/res/: CMakeLists.txt
arcanoid/src/: component.hxx  coordinator.cxx  coordinator.hxx  entity.cxx  entt-test.cxx  game-system.cxx  game-system.hxx  game.cxx  game.hxx  main.cxx
